deploy/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  annotations:
    io.cilium/global-service: "true"
    io.cilium/service-affinity: "local"
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
