deploy/whoami-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
  annotations:
    io.cilium/global-service: "true"
    io.cilium/service-affinity: "local"
spec:
  selector:
    app: whoami
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
